# special-octo-journey

./: .gitignore  Cargo.toml  README.md
frontend/: Cargo.toml
frontend/public/: glue.js  main.css
frontend/src/: main.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
