[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.59"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = "0.19.3"
